--- a/app/views/main.scala.html
+++ b/app/views/main.scala.html
@@ -12,7 +12,9 @@
         @* Here's where we render the page title `String`. *@
         <title>@title</title>
         <link rel="stylesheet" media="screen" href="@routes.Assets.versioned("stylesheets/main.css")">
+        <link rel="stylesheet" media="screen" href="@routes.Assets.versioned("/lib/bootstrap/dist/css/bootstrap.css")">
         <link rel="shortcut icon" type="image/png" href="@routes.Assets.versioned("images/favicon.png")">
+        <script src="@routes.Assets.versioned("/lib/bootstrap/dist/js/bootstrap.js")"></script>
 
     </head>
     <body>
