Finally! We got a DB, but I don't think anyone truly understand what is really going on. But we will reinforce tomorrow.

--- a/app/views/stadium/stadiums.scala.html
+++ b/app/views/stadium/stadiums.scala.html
@@ -4,6 +4,6 @@
 
 <ul>
 @for(stadium <- stadiums) {
-    <li>@stadium.name</li>
+    <li><a href="@routes.StadiumController.show(stadium.id)">@stadium.name</a></li>
 }
 </ul>
